<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ambiguous</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_button_cards">Cards</string>
    <string name="menu_button_game">Game</string>
    <string name="title_activity_deckmanager">Deck Manager</string>
    <string name="title_activity_network">Network</string>
    <string name="menu_button_network">LAN Network game</string>
    <string name="menu_button_server">Server</string>
    <string name="menu_button_client">Client</string>
    <string name="menu_button_google">Play online with google+</string>
    <string name="activity_main_usecard">Use card</string>
    <string name="activity_main_discard">Discard card</string>
    <string name="armor">Armor</string>
    <string name="health">Health</string>
    <string name="resource">Resource</string>
    <string name="score">Score</string>
    <string name="help">Help</string>
    <string name="server_address_editor_title">Server address</string>
    <string name="server_address_editor_message">Type server address</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected to opponent</string>
    <string name="disconnect">Disconnect</string>
    <string name="abort">Abort</string>
    <string name="close">Close</string>
    <string name="network_client_start_toast">Starting client</string>
    <string name="network_server_start_toast">Starting server</string>
    <string name="network_picker_exception_title">Error, problem getting network interfaces.</string>
    <string name="network_client_connecting_text">Trying to connect to server at ip: %1$s port: %2$d</string>
    <string name="network_server_listening_text">Listening for client at ip: %1$s port: %2$d</string>
    <string name="anoying_notification">You have a uncompleted game running. Click to resume game!</string>
    <string name="pref_user">Username</string>
    <string name="pref_user_default">You</string>
    <string name="pref_bgcolor">background color</string>
    <string name="pref_bgcolor_default">Amber</string>
    <string name="menu_button_resume">Resume</string>
    <string name="tutorial_usecard">The objective of the game is to kill your opponent, by using cards that lowers his health, before he can kill you.
        You can protect yourself with armor which functions as extra health (blue). Or heal yourself with (green).
         
        </string>
    <string name="tutorial_discard">Drag cards up to use, down to discard</string>
    <string name="tutorial_stats">Shows your Health, Armor and Resources. 
        Armor works like extra health. You need resources to use cards.</string>
    <string name="tutorial_cards">The number at the top of the card is the amount of resource neded to use this card.\n\n
        The numbers at the bottom of the card is the amount of effect the card will do.
        The numbers are either Minimum - Maximum(Critical hit) or a single flat number. </string>
    <string name="tutorial_neverShowTutorialButton">Close and never show tutorial again</string>
    <string name="tutorial_header">Tutorial</string>
    <string name="tutorial_image_stats_description">Image of players stats</string>
    <string name="tutorial_image_cards_description">Image of a card</string>
    <string name="tutorial_button_show">Tutorial</string>
    <string name="opponents_actions">Opponent`s actions:</string>
    <string name="status_multiplayer_error_not_trusted_tester">Only players added as testers in google developer console can use the app while its in test mode.</string>
    <string name="match_error_already_rematched">Already rematched</string>
    <string name="network_error_operation_failed">The network operation failed.</string>
    <string name="client_reconnect_required">Client have to reconnect.</string>
    <string name="internal_error">Internal error.</string>
    <string name="match_error_inactive_match">The match is inactive</string>
    <string name="match_error_locally_modified">The game has been modified locally</string>
    <string name="match_error_invalid_participant_state">State of participant is invalid. Game not accepted?</string>
    <string name="unexpected_status">Unexpected status</string>
    <string name="show_active_games">Show game inbox</string>
    <string name="find_opponent">Find new opponent</string>
    <string name="activeGamesText">%1$d games waiting for your turn \n%2$d waiting game invites</string>
    <string name="gpg_header">Pick an option to continue:</string>
    <string name="victory">Victory!</string>
    <string name="defeat">Defeat!</string>
    <string name="close_service">Close Ambiguous service</string>
    <string name="got_invite_from">Got match sinvitation from %1s</string>
    <string name="match_waiting_for_turn">Your turn against %1s</string>
    <string name="accept">Accept</string>
    <string name="denie">Denie</string>
    <string name="discarded">DISCARDED</string>
    <string name="GPG_service_off">This feature is not supported for your device</string>
    <string name="GPG_service_on">Disable GPG service</string>
    <string name="close_gpg_service">Close Google Play Game service</string>
    <string name="toast_message_disregard_outcome">Disregarding outcome of this game due to cheat</string>
    <string name="your_turn">Your turn</string>
    <string name="error">Error</string>
    <string name="could_not_load_GPG_data">There was a problem loading game data from GPG.</string>
    <string name="network_error_abort_game">There was a problem communicating with your opponent, aborting game.</string>
    <string name="btn_widget_start_ambiguous_text">Start Ambiguous</string>
    <string name="never_show_message_again">Never show this message again.</string>
    <string name="minigame_help_message">Keep the white bar inside of the red bar by tilting the device left and right.</string>
    <string name="minigame_help_title">Minigame help</string>
    <string name="start">Start</string>
    <string name="gpg_load_error">There was an error loading Google Play Game aborting....</string>
    <string name="ambiguous_header_image_black">Ambiguous header image, black</string>
    <string name="ambiguous_header_image_sword">Ambiguous header image, sword</string>
    <string name="total_victories">"Total victories: "</string>
    <string name="save_error">There was an error saving game data.</string>
    <string name="wait_connecting_to_google">Please wait, connecting to Google</string>

</resources>