<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

     <ImageView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:cropToPadding="true"
         android:src="@drawable/ambiguous_header_cropped" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        
        <Button
            android:id="@+id/resume_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="goToResumeGame"
            android:text="@string/menu_button_resume"
            android:enabled="false"
            android:layout_marginBottom="3dp"
            android:background="@drawable/btn_main" />

        <Button
            android:id="@+id/game_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="goToGame"
            android:text="@string/menu_button_game"
            android:layout_marginBottom="3dp"
            android:background="@drawable/btn_main" />

        <Button
            android:id="@+id/cards_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="goToDeckManager"
            android:text="@string/menu_button_cards"
            android:layout_marginBottom="3dp"
            android:background="@drawable/btn_main" />

        <Button
            android:id="@+id/network_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="goToNetwork"
            android:text="@string/menu_button_network"
            android:layout_marginBottom="3dp"
            android:background="@drawable/btn_main" />

        <Button
            android:id="@+id/play_google_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="goToGoogle"
            android:text="@string/menu_button_google"
            android:layout_marginBottom="3dp"
            android:background="@drawable/btn_main" />
        
        <Button
            android:id="@+id/close_gpg_service_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="stopGPGService"
            android:visibility="gone"
            android:text="@string/close_gpg_service"
            android:layout_marginBottom="3dp"
            android:background="@drawable/btn_main" />

    </LinearLayout>

</RelativeLayout>