<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gpg_fragment_container"
        android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@drawable/layout_bg">


        <ImageView
            android:id="@+id/logon_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:src="@android:drawable/presence_offline" />

        <TextView
            android:id="@+id/gpg_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/logon_icon"
            android:text="@string/gpg_header"
            android:textSize="20sp" />

        <!-- sign-in button -->

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

        <!-- sign-out button -->

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="Sign Out"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/findOpponentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gpg_header"
            android:text="@string/find_opponent"
            android:textSize="12sp" >
        </Button>

        <Button
            android:id="@+id/showActiveGamesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/findOpponentButton"
            android:text="@string/show_active_games"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/activeGamesSpinner"
            style="@style/Widget.AppCompat.Base.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/showActiveGamesButton"
            android:layout_toRightOf="@id/showActiveGamesButton" />

        <TextView
            android:id="@+id/activeGamesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/showActiveGamesButton"
            android:layout_toRightOf="@id/showActiveGamesButton"
            android:visibility="gone" />

</RelativeLayout>